# cs267_project_code

./: README.md
agent_based_create_network/: CMakeLists.txt  main.cpp
agent_based_create_network_opemp_test/: CMakeLists.txt  main  main.cpp  zipcode_index_dict.json
agent_based_simulate_cuda_test/: CMakeLists.txt  common.h  main.cu
agent_based_simulate_serial/: main.cu
correctness_check/: correctness.py  file2.txt
plot/cuda/: cuda_time_plot.py  python_cxx_compare  python_cxx_compare.py
plot/openmp/: cxx_contention_compare.py  cxx_method_compare.py  openmp_plot.py  python_cxx_compare.py  scale_0.00365_pthreads_1.txt  scale_0.00365_pthreads_16.txt  scale_0.00365_pthreads_2.txt  scale_0.00365_pthreads_4.txt  scale_0.00365_pthreads_8.txt  scale_0.0073_pthreads_1.txt  scale_0.0073_pthreads_16.txt  scale_0.0073_pthreads_2.txt  scale_0.0073_pthreads_4.txt  scale_0.0073_pthreads_8.txt  scale_0.015_pthreads_1.txt  scale_0.015_pthreads_16.txt  scale_0.015_pthreads_2.txt  scale_0.015_pthreads_4.txt  scale_0.015_pthreads_8.txt  scale_0.02905_pthreads_1.txt  scale_0.02905_pthreads_16.txt  scale_0.02905_pthreads_2.txt  scale_0.02905_pthreads_4.txt  scale_0.02905_pthreads_8.txt  scale_0.04355_pthreads_1.txt  scale_0.04355_pthreads_16.txt  scale_0.04355_pthreads_2.txt  scale_0.04355_pthreads_4.txt  scale_0.04355_pthreads_8.txt  weak_scaling.py
plot/roofline/: roofline.py
